[gd_scene load_steps=2 format=3 uid="uid://character_select_panel"]

[ext_resource type="Script" path="res://scripts/ui/character_select_panel.gd" id="1_character_select_panel"]

[node name="CharacterSelectPanel" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_character_select_panel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
text = "选择角色"

[node name="DescriptionLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.85)
theme_override_font_sizes/font_size = 22
text = "请选择一个角色"
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="CharacterContainer" type="HFlowContainer" parent="VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 18
theme_override_constants/v_separation = 18

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 18

[node name="BackButton" type="Button" parent="VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 60)
theme_override_font_sizes/font_size = 26
text = "返回"
flat = true

[node name="ConfirmButton" type="Button" parent="VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 60)
theme_override_font_sizes/font_size = 26
text = "确认选择"
flat = true
disabled = true
